data/derived/fa15/progs/unify/prog3621.ml.out
Characters 84-86:
  | Sine(v) -> sin(pi*eval (v,x,y))
                   ^^
Error: This expression has type float but an expression was expected of type
         int
